--- a/app123.properties
+++ b/app123.properties
@@ -1,3 +1,7 @@
 test.property=My Test Value!
-another.sentence=I am so awesome.
-concurrent.request.limit=231
+
+officialGreeting=Hello from the config server and github and the cloud!
+server.port=7979
+
+# allow for RefreshScope
+management.endpoints.web.exposure.include=*
