--- a/app123.properties
+++ b/app123.properties
@@ -1,6 +1,6 @@
 test.property=My Test Value!
 
-officialGreeting=Hello from the config server and github and the cloud!
+officialGreeting=Hello from Ruksar!
 server.port=7979
 
 # allow for RefreshScope
