--- a/app123.properties
+++ b/app123.properties
@@ -1,6 +1,6 @@
 test.property=My Test Value!
 
-officialGreeting=Hello from Karen! She'd like to speak to your manager.
+officialGreeting=Good bye.
 server.port=7979
 
 # allow for RefreshScope
