--- a/app123.properties
+++ b/app123.properties
@@ -1,6 +1,6 @@
-test.property=My Test Value!
+test.property=My Test String which has changed.
 
-officialGreeting=Good bye.
+officialGreeting=Good bye-uh.
 server.port=7979
 
 # allow for RefreshScope
