--- a/app123.properties
+++ b/app123.properties
@@ -1,7 +1,9 @@
-test.property=My Test String which has changed.
-
 officialGreeting=Good bye-uh.
 server.port=7979
 
 # allow for RefreshScope
 management.endpoints.web.exposure.include=*
+
+quoteServiceName=quote-service
+serviceProtocol=http://
+servicePath=/quote
