--- a/quote-service.properties
+++ b/quote-service.properties
@@ -1,3 +1,6 @@
 random.quote=Hello!!!
 server.port=2244
 management.endpoints.web.exposure.include=*
+eightBallServiceName=magic-eight-ball-service
+serviceProtocol=http://
+servicePath=/answer
