--- a/train-reservation.properties
+++ b/train-reservation.properties
@@ -2,3 +2,6 @@ server.port=7602
 spring.datasource.url: jdbc:mysql://localhost:3306/train-tracker?useSSL=false&serverTimezone=US/Central&allowPublicKeyRetrieval=true
 spring.datasource.username: root
 spring.datasource.password: rootroot
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
