--- a/train-reservation.properties
+++ b/train-reservation.properties
@@ -1,5 +1,5 @@
 server.port=7602
-spring.datasource.url: jdbc:mysql://localhost:3306/train-tracker?useSSL=false&serverTimezone=US/Central&allowPublicKeyRetrieval=true
+spring.datasource.url: jdbc:mysql://localhost:3306/train_tracker?useSSL=false&serverTimezone=US/Central&allowPublicKeyRetrieval=true
 spring.datasource.username: root
 spring.datasource.password: rootroot
 
